@@ -15,3 +15,4 @@ you don't have to capture and send errors manually.
    log4j
    log4j2
    logback
+   spring
