@@ -79,6 +79,7 @@
         <module>sentry-log4j</module>
         <module>sentry-logback</module>
         <module>sentry-log4j2</module>
+        <module>sentry-spring</module>
     </modules>
 
     <scm>
