@@ -1,0 +1,3 @@
+# sentry-spring
+
+See the [Sentry documentation](https://docs.sentry.io/clients/java/modules/spring/) for more information.
