@@ -3,6 +3,7 @@ Version 1.3.2
 
 - Automatically set ``stacktrace.app.packages`` on Android if it is not provided by the user.
 - Enable UncaughtExceptionHandler by default, add ``uncaught.handler.enabled`` option.
+- Add Spring exception reporter and Spring Boot servlet initializer.
 
 Version 1.3.1
 -------------
